build/net_lang.output
Grammar

    0 $accept: program $end

    1 program: network_def
    2        | module_list network_def

    3 module_list: module_def
    4            | module_list module_def

    5 network_def: NETWORK IDENTIFIER LBRACE network_body RBRACE

    6 network_body: input_decl optional_weights_decl statement_list_nonempty

    7 module_def: MODULE IDENTIFIER LPAREN module_params RPAREN LBRACE statement_list return_stmt RBRACE

    8 module_params: %empty
    9              | param_list

   10 param_list: IDENTIFIER
   11           | param_list COMMA IDENTIFIER

   12 input_decl: INPUT LPAREN SHAPE COLON array RPAREN

   13 weights_decl: WEIGHTS LPAREN STRING_LIT RPAREN

   14 optional_weights_decl: %empty
   15                      | weights_decl

   16 statement_list: %empty
   17               | statement_list statement

   18 statement_list_nonempty: statement
   19                        | statement_list_nonempty statement

   20 statement: assignment

   21 assignment: IDENTIFIER ASSIGN layer_expr optional_from_clause

   22 optional_from_clause: %empty
   23                     | FROM expr

   24 return_stmt: RETURN expr

   25 layer_expr: conv2d_layer
   26           | dense_layer
   27           | pool_layer
   28           | flatten_layer
   29           | add_layer
   30           | concat_layer
   31           | norm_layer
   32           | module_call

   33 conv2d_layer: CONV2D LPAREN FILTERS COLON expr COMMA KERNEL COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr COMMA ACTIVATION COLON activation_value RPAREN

   34 dense_layer: DENSE LPAREN UNITS COLON expr COMMA ACTIVATION COLON activation_value RPAREN

   35 pool_layer: MAXPOOL LPAREN POOL COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr RPAREN
   36           | AVGPOOL LPAREN POOL COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr RPAREN

   37 flatten_layer: FLATTEN LPAREN RPAREN

   38 add_layer: ADD LPAREN add_args RPAREN

   39 add_args: expr
   40         | add_args COMMA expr

   41 concat_layer: CONCAT LPAREN concat_args RPAREN

   42 concat_args: expr
   43            | concat_args COMMA expr

   44 norm_layer: BATCHNORM LPAREN RPAREN
   45           | LAYERNORM LPAREN RPAREN

   46 module_call: IDENTIFIER LPAREN layer_params RPAREN

   47 layer_params: %empty
   48             | layer_param_list

   49 layer_param_list: IDENTIFIER COLON expr
   50                 | FILTERS COLON expr
   51                 | KERNEL COLON expr
   52                 | ACTIVATION COLON expr
   53                 | STRIDE COLON expr
   54                 | PADDING COLON expr
   55                 | POOL COLON expr
   56                 | UNITS COLON expr
   57                 | layer_param_list COMMA IDENTIFIER COLON expr
   58                 | layer_param_list COMMA FILTERS COLON expr
   59                 | layer_param_list COMMA KERNEL COLON expr
   60                 | layer_param_list COMMA ACTIVATION COLON expr
   61                 | layer_param_list COMMA STRIDE COLON expr
   62                 | layer_param_list COMMA PADDING COLON expr
   63                 | layer_param_list COMMA POOL COLON expr
   64                 | layer_param_list COMMA UNITS COLON expr

   65 expr: number
   66     | array
   67     | identifier_expr
   68     | activation_value

   69 identifier_expr: IDENTIFIER
   70                | INPUT

   71 number: NUMBER
   72       | FLOAT_NUM

   73 array: LBRACKET array_elements RBRACKET

   74 array_elements: number
   75               | array_elements COMMA number

   76 activation_value: RELU
   77                 | SIGMOID
   78                 | TANH
   79                 | SOFTMAX
   80                 | LINEAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NETWORK (258) 5
    MODULE (259) 7
    RETURN (260) 24
    FROM (261) 23
    INPUT (262) 12 70
    SHAPE (263) 12
    WEIGHTS (264) 13
    CONV2D (265) 33
    DENSE (266) 34
    MAXPOOL (267) 35
    AVGPOOL (268) 36
    FLATTEN (269) 37
    ADD (270) 38
    CONCAT (271) 41
    BATCHNORM (272) 44
    LAYERNORM (273) 45
    FILTERS (274) 33 50 58
    KERNEL (275) 33 51 59
    ACTIVATION (276) 33 34 52 60
    STRIDE (277) 33 35 36 53 61
    PADDING (278) 33 35 36 54 62
    POOL (279) 35 36 55 63
    UNITS (280) 34 56 64
    RELU (281) 76
    SIGMOID (282) 77
    TANH (283) 78
    SOFTMAX (284) 79
    LINEAR (285) 80
    NUMBER <ival> (286) 71
    FLOAT_NUM <fval> (287) 72
    IDENTIFIER <sval> (288) 5 7 10 11 21 46 49 57 69
    STRING_LIT <sval> (289) 13
    LBRACE (290) 5 7
    RBRACE (291) 5 7
    LBRACKET (292) 73
    RBRACKET (293) 73
    LPAREN (294) 7 12 13 33 34 35 36 37 38 41 44 45 46
    RPAREN (295) 7 12 13 33 34 35 36 37 38 41 44 45 46
    COLON (296) 12 33 34 35 36 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    COMMA (297) 11 33 34 35 36 40 43 57 58 59 60 61 62 63 64 75
    ASSIGN (298) 21


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program <node> (45)
        on left: 1 2
        on right: 0
    module_list <list> (46)
        on left: 3 4
        on right: 2 4
    network_def <node> (47)
        on left: 5
        on right: 1 2
    network_body <netbody> (48)
        on left: 6
        on right: 5
    module_def <node> (49)
        on left: 7
        on right: 3 4
    module_params <params> (50)
        on left: 8 9
        on right: 7
    param_list <params> (51)
        on left: 10 11
        on right: 9 11
    input_decl <node> (52)
        on left: 12
        on right: 6
    weights_decl <node> (53)
        on left: 13
        on right: 15
    optional_weights_decl <node> (54)
        on left: 14 15
        on right: 6
    statement_list <list> (55)
        on left: 16 17
        on right: 7 17
    statement_list_nonempty <list> (56)
        on left: 18 19
        on right: 6 19
    statement <node> (57)
        on left: 20
        on right: 17 18 19
    assignment <node> (58)
        on left: 21
        on right: 20
    optional_from_clause <node> (59)
        on left: 22 23
        on right: 21
    return_stmt <node> (60)
        on left: 24
        on right: 7
    layer_expr <node> (61)
        on left: 25 26 27 28 29 30 31 32
        on right: 21
    conv2d_layer <node> (62)
        on left: 33
        on right: 25
    dense_layer <node> (63)
        on left: 34
        on right: 26
    pool_layer <node> (64)
        on left: 35 36
        on right: 27
    flatten_layer <node> (65)
        on left: 37
        on right: 28
    add_layer <node> (66)
        on left: 38
        on right: 29
    add_args <list> (67)
        on left: 39 40
        on right: 38 40
    concat_layer <node> (68)
        on left: 41
        on right: 30
    concat_args <list> (69)
        on left: 42 43
        on right: 41 43
    norm_layer <node> (70)
        on left: 44 45
        on right: 31
    module_call <node> (71)
        on left: 46
        on right: 32
    layer_params <params> (72)
        on left: 47 48
        on right: 46
    layer_param_list <params> (73)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 48 57 58 59 60 61 62 63 64
    expr <node> (74)
        on left: 65 66 67 68
        on right: 23 24 33 34 35 36 39 40 42 43 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    identifier_expr <node> (75)
        on left: 69 70
        on right: 67
    number <node> (76)
        on left: 71 72
        on right: 65 74 75
    array <node> (77)
        on left: 73
        on right: 12 33 35 36 66
    array_elements <list> (78)
        on left: 74 75
        on right: 73 75
    activation_value <activation> (79)
        on left: 76 77 78 79 80
        on right: 33 34 68


State 0

    0 $accept: . program $end

    NETWORK  shift, and go to state 1
    MODULE   shift, and go to state 2

    program      go to state 3
    module_list  go to state 4
    network_def  go to state 5
    module_def   go to state 6


State 1

    5 network_def: NETWORK . IDENTIFIER LBRACE network_body RBRACE

    IDENTIFIER  shift, and go to state 7


State 2

    7 module_def: MODULE . IDENTIFIER LPAREN module_params RPAREN LBRACE statement_list return_stmt RBRACE

    IDENTIFIER  shift, and go to state 8


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    2 program: module_list . network_def
    4 module_list: module_list . module_def

    NETWORK  shift, and go to state 1
    MODULE   shift, and go to state 2

    network_def  go to state 10
    module_def   go to state 11


State 5

    1 program: network_def .

    $default  reduce using rule 1 (program)


State 6

    3 module_list: module_def .

    $default  reduce using rule 3 (module_list)


State 7

    5 network_def: NETWORK IDENTIFIER . LBRACE network_body RBRACE

    LBRACE  shift, and go to state 12


State 8

    7 module_def: MODULE IDENTIFIER . LPAREN module_params RPAREN LBRACE statement_list return_stmt RBRACE

    LPAREN  shift, and go to state 13


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 program: module_list network_def .

    $default  reduce using rule 2 (program)


State 11

    4 module_list: module_list module_def .

    $default  reduce using rule 4 (module_list)


State 12

    5 network_def: NETWORK IDENTIFIER LBRACE . network_body RBRACE

    INPUT  shift, and go to state 14

    network_body  go to state 15
    input_decl    go to state 16


State 13

    7 module_def: MODULE IDENTIFIER LPAREN . module_params RPAREN LBRACE statement_list return_stmt RBRACE

    IDENTIFIER  shift, and go to state 17

    $default  reduce using rule 8 (module_params)

    module_params  go to state 18
    param_list     go to state 19


State 14

   12 input_decl: INPUT . LPAREN SHAPE COLON array RPAREN

    LPAREN  shift, and go to state 20


State 15

    5 network_def: NETWORK IDENTIFIER LBRACE network_body . RBRACE

    RBRACE  shift, and go to state 21


State 16

    6 network_body: input_decl . optional_weights_decl statement_list_nonempty

    WEIGHTS  shift, and go to state 22

    $default  reduce using rule 14 (optional_weights_decl)

    weights_decl           go to state 23
    optional_weights_decl  go to state 24


State 17

   10 param_list: IDENTIFIER .

    $default  reduce using rule 10 (param_list)


State 18

    7 module_def: MODULE IDENTIFIER LPAREN module_params . RPAREN LBRACE statement_list return_stmt RBRACE

    RPAREN  shift, and go to state 25


State 19

    9 module_params: param_list .
   11 param_list: param_list . COMMA IDENTIFIER

    COMMA  shift, and go to state 26

    $default  reduce using rule 9 (module_params)


State 20

   12 input_decl: INPUT LPAREN . SHAPE COLON array RPAREN

    SHAPE  shift, and go to state 27


State 21

    5 network_def: NETWORK IDENTIFIER LBRACE network_body RBRACE .

    $default  reduce using rule 5 (network_def)


State 22

   13 weights_decl: WEIGHTS . LPAREN STRING_LIT RPAREN

    LPAREN  shift, and go to state 28


State 23

   15 optional_weights_decl: weights_decl .

    $default  reduce using rule 15 (optional_weights_decl)


State 24

    6 network_body: input_decl optional_weights_decl . statement_list_nonempty

    IDENTIFIER  shift, and go to state 29

    statement_list_nonempty  go to state 30
    statement                go to state 31
    assignment               go to state 32


State 25

    7 module_def: MODULE IDENTIFIER LPAREN module_params RPAREN . LBRACE statement_list return_stmt RBRACE

    LBRACE  shift, and go to state 33


State 26

   11 param_list: param_list COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 34


State 27

   12 input_decl: INPUT LPAREN SHAPE . COLON array RPAREN

    COLON  shift, and go to state 35


State 28

   13 weights_decl: WEIGHTS LPAREN . STRING_LIT RPAREN

    STRING_LIT  shift, and go to state 36


State 29

   21 assignment: IDENTIFIER . ASSIGN layer_expr optional_from_clause

    ASSIGN  shift, and go to state 37


State 30

    6 network_body: input_decl optional_weights_decl statement_list_nonempty .
   19 statement_list_nonempty: statement_list_nonempty . statement

    IDENTIFIER  shift, and go to state 29

    $default  reduce using rule 6 (network_body)

    statement   go to state 38
    assignment  go to state 32


State 31

   18 statement_list_nonempty: statement .

    $default  reduce using rule 18 (statement_list_nonempty)


State 32

   20 statement: assignment .

    $default  reduce using rule 20 (statement)


State 33

    7 module_def: MODULE IDENTIFIER LPAREN module_params RPAREN LBRACE . statement_list return_stmt RBRACE

    $default  reduce using rule 16 (statement_list)

    statement_list  go to state 39


State 34

   11 param_list: param_list COMMA IDENTIFIER .

    $default  reduce using rule 11 (param_list)


State 35

   12 input_decl: INPUT LPAREN SHAPE COLON . array RPAREN

    LBRACKET  shift, and go to state 40

    array  go to state 41


State 36

   13 weights_decl: WEIGHTS LPAREN STRING_LIT . RPAREN

    RPAREN  shift, and go to state 42


State 37

   21 assignment: IDENTIFIER ASSIGN . layer_expr optional_from_clause

    CONV2D      shift, and go to state 43
    DENSE       shift, and go to state 44
    MAXPOOL     shift, and go to state 45
    AVGPOOL     shift, and go to state 46
    FLATTEN     shift, and go to state 47
    ADD         shift, and go to state 48
    CONCAT      shift, and go to state 49
    BATCHNORM   shift, and go to state 50
    LAYERNORM   shift, and go to state 51
    IDENTIFIER  shift, and go to state 52

    layer_expr     go to state 53
    conv2d_layer   go to state 54
    dense_layer    go to state 55
    pool_layer     go to state 56
    flatten_layer  go to state 57
    add_layer      go to state 58
    concat_layer   go to state 59
    norm_layer     go to state 60
    module_call    go to state 61


State 38

   19 statement_list_nonempty: statement_list_nonempty statement .

    $default  reduce using rule 19 (statement_list_nonempty)


State 39

    7 module_def: MODULE IDENTIFIER LPAREN module_params RPAREN LBRACE statement_list . return_stmt RBRACE
   17 statement_list: statement_list . statement

    RETURN      shift, and go to state 62
    IDENTIFIER  shift, and go to state 29

    statement    go to state 63
    assignment   go to state 32
    return_stmt  go to state 64


State 40

   73 array: LBRACKET . array_elements RBRACKET

    NUMBER     shift, and go to state 65
    FLOAT_NUM  shift, and go to state 66

    number          go to state 67
    array_elements  go to state 68


State 41

   12 input_decl: INPUT LPAREN SHAPE COLON array . RPAREN

    RPAREN  shift, and go to state 69


State 42

   13 weights_decl: WEIGHTS LPAREN STRING_LIT RPAREN .

    $default  reduce using rule 13 (weights_decl)


State 43

   33 conv2d_layer: CONV2D . LPAREN FILTERS COLON expr COMMA KERNEL COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr COMMA ACTIVATION COLON activation_value RPAREN

    LPAREN  shift, and go to state 70


State 44

   34 dense_layer: DENSE . LPAREN UNITS COLON expr COMMA ACTIVATION COLON activation_value RPAREN

    LPAREN  shift, and go to state 71


State 45

   35 pool_layer: MAXPOOL . LPAREN POOL COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr RPAREN

    LPAREN  shift, and go to state 72


State 46

   36 pool_layer: AVGPOOL . LPAREN POOL COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr RPAREN

    LPAREN  shift, and go to state 73


State 47

   37 flatten_layer: FLATTEN . LPAREN RPAREN

    LPAREN  shift, and go to state 74


State 48

   38 add_layer: ADD . LPAREN add_args RPAREN

    LPAREN  shift, and go to state 75


State 49

   41 concat_layer: CONCAT . LPAREN concat_args RPAREN

    LPAREN  shift, and go to state 76


State 50

   44 norm_layer: BATCHNORM . LPAREN RPAREN

    LPAREN  shift, and go to state 77


State 51

   45 norm_layer: LAYERNORM . LPAREN RPAREN

    LPAREN  shift, and go to state 78


State 52

   46 module_call: IDENTIFIER . LPAREN layer_params RPAREN

    LPAREN  shift, and go to state 79


State 53

   21 assignment: IDENTIFIER ASSIGN layer_expr . optional_from_clause

    FROM  shift, and go to state 80

    $default  reduce using rule 22 (optional_from_clause)

    optional_from_clause  go to state 81


State 54

   25 layer_expr: conv2d_layer .

    $default  reduce using rule 25 (layer_expr)


State 55

   26 layer_expr: dense_layer .

    $default  reduce using rule 26 (layer_expr)


State 56

   27 layer_expr: pool_layer .

    $default  reduce using rule 27 (layer_expr)


State 57

   28 layer_expr: flatten_layer .

    $default  reduce using rule 28 (layer_expr)


State 58

   29 layer_expr: add_layer .

    $default  reduce using rule 29 (layer_expr)


State 59

   30 layer_expr: concat_layer .

    $default  reduce using rule 30 (layer_expr)


State 60

   31 layer_expr: norm_layer .

    $default  reduce using rule 31 (layer_expr)


State 61

   32 layer_expr: module_call .

    $default  reduce using rule 32 (layer_expr)


State 62

   24 return_stmt: RETURN . expr

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    expr              go to state 89
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 63

   17 statement_list: statement_list statement .

    $default  reduce using rule 17 (statement_list)


State 64

    7 module_def: MODULE IDENTIFIER LPAREN module_params RPAREN LBRACE statement_list return_stmt . RBRACE

    RBRACE  shift, and go to state 94


State 65

   71 number: NUMBER .

    $default  reduce using rule 71 (number)


State 66

   72 number: FLOAT_NUM .

    $default  reduce using rule 72 (number)


State 67

   74 array_elements: number .

    $default  reduce using rule 74 (array_elements)


State 68

   73 array: LBRACKET array_elements . RBRACKET
   75 array_elements: array_elements . COMMA number

    RBRACKET  shift, and go to state 95
    COMMA     shift, and go to state 96


State 69

   12 input_decl: INPUT LPAREN SHAPE COLON array RPAREN .

    $default  reduce using rule 12 (input_decl)


State 70

   33 conv2d_layer: CONV2D LPAREN . FILTERS COLON expr COMMA KERNEL COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr COMMA ACTIVATION COLON activation_value RPAREN

    FILTERS  shift, and go to state 97


State 71

   34 dense_layer: DENSE LPAREN . UNITS COLON expr COMMA ACTIVATION COLON activation_value RPAREN

    UNITS  shift, and go to state 98


State 72

   35 pool_layer: MAXPOOL LPAREN . POOL COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr RPAREN

    POOL  shift, and go to state 99


State 73

   36 pool_layer: AVGPOOL LPAREN . POOL COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr RPAREN

    POOL  shift, and go to state 100


State 74

   37 flatten_layer: FLATTEN LPAREN . RPAREN

    RPAREN  shift, and go to state 101


State 75

   38 add_layer: ADD LPAREN . add_args RPAREN

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    add_args          go to state 102
    expr              go to state 103
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 76

   41 concat_layer: CONCAT LPAREN . concat_args RPAREN

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    concat_args       go to state 104
    expr              go to state 105
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 77

   44 norm_layer: BATCHNORM LPAREN . RPAREN

    RPAREN  shift, and go to state 106


State 78

   45 norm_layer: LAYERNORM LPAREN . RPAREN

    RPAREN  shift, and go to state 107


State 79

   46 module_call: IDENTIFIER LPAREN . layer_params RPAREN

    FILTERS     shift, and go to state 108
    KERNEL      shift, and go to state 109
    ACTIVATION  shift, and go to state 110
    STRIDE      shift, and go to state 111
    PADDING     shift, and go to state 112
    POOL        shift, and go to state 113
    UNITS       shift, and go to state 114
    IDENTIFIER  shift, and go to state 115

    $default  reduce using rule 47 (layer_params)

    layer_params      go to state 116
    layer_param_list  go to state 117


State 80

   23 optional_from_clause: FROM . expr

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    expr              go to state 118
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 81

   21 assignment: IDENTIFIER ASSIGN layer_expr optional_from_clause .

    $default  reduce using rule 21 (assignment)


State 82

   70 identifier_expr: INPUT .

    $default  reduce using rule 70 (identifier_expr)


State 83

   76 activation_value: RELU .

    $default  reduce using rule 76 (activation_value)


State 84

   77 activation_value: SIGMOID .

    $default  reduce using rule 77 (activation_value)


State 85

   78 activation_value: TANH .

    $default  reduce using rule 78 (activation_value)


State 86

   79 activation_value: SOFTMAX .

    $default  reduce using rule 79 (activation_value)


State 87

   80 activation_value: LINEAR .

    $default  reduce using rule 80 (activation_value)


State 88

   69 identifier_expr: IDENTIFIER .

    $default  reduce using rule 69 (identifier_expr)


State 89

   24 return_stmt: RETURN expr .

    $default  reduce using rule 24 (return_stmt)


State 90

   67 expr: identifier_expr .

    $default  reduce using rule 67 (expr)


State 91

   65 expr: number .

    $default  reduce using rule 65 (expr)


State 92

   66 expr: array .

    $default  reduce using rule 66 (expr)


State 93

   68 expr: activation_value .

    $default  reduce using rule 68 (expr)


State 94

    7 module_def: MODULE IDENTIFIER LPAREN module_params RPAREN LBRACE statement_list return_stmt RBRACE .

    $default  reduce using rule 7 (module_def)


State 95

   73 array: LBRACKET array_elements RBRACKET .

    $default  reduce using rule 73 (array)


State 96

   75 array_elements: array_elements COMMA . number

    NUMBER     shift, and go to state 65
    FLOAT_NUM  shift, and go to state 66

    number  go to state 119


State 97

   33 conv2d_layer: CONV2D LPAREN FILTERS . COLON expr COMMA KERNEL COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr COMMA ACTIVATION COLON activation_value RPAREN

    COLON  shift, and go to state 120


State 98

   34 dense_layer: DENSE LPAREN UNITS . COLON expr COMMA ACTIVATION COLON activation_value RPAREN

    COLON  shift, and go to state 121


State 99

   35 pool_layer: MAXPOOL LPAREN POOL . COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr RPAREN

    COLON  shift, and go to state 122


State 100

   36 pool_layer: AVGPOOL LPAREN POOL . COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr RPAREN

    COLON  shift, and go to state 123


State 101

   37 flatten_layer: FLATTEN LPAREN RPAREN .

    $default  reduce using rule 37 (flatten_layer)


State 102

   38 add_layer: ADD LPAREN add_args . RPAREN
   40 add_args: add_args . COMMA expr

    RPAREN  shift, and go to state 124
    COMMA   shift, and go to state 125


State 103

   39 add_args: expr .

    $default  reduce using rule 39 (add_args)


State 104

   41 concat_layer: CONCAT LPAREN concat_args . RPAREN
   43 concat_args: concat_args . COMMA expr

    RPAREN  shift, and go to state 126
    COMMA   shift, and go to state 127


State 105

   42 concat_args: expr .

    $default  reduce using rule 42 (concat_args)


State 106

   44 norm_layer: BATCHNORM LPAREN RPAREN .

    $default  reduce using rule 44 (norm_layer)


State 107

   45 norm_layer: LAYERNORM LPAREN RPAREN .

    $default  reduce using rule 45 (norm_layer)


State 108

   50 layer_param_list: FILTERS . COLON expr

    COLON  shift, and go to state 128


State 109

   51 layer_param_list: KERNEL . COLON expr

    COLON  shift, and go to state 129


State 110

   52 layer_param_list: ACTIVATION . COLON expr

    COLON  shift, and go to state 130


State 111

   53 layer_param_list: STRIDE . COLON expr

    COLON  shift, and go to state 131


State 112

   54 layer_param_list: PADDING . COLON expr

    COLON  shift, and go to state 132


State 113

   55 layer_param_list: POOL . COLON expr

    COLON  shift, and go to state 133


State 114

   56 layer_param_list: UNITS . COLON expr

    COLON  shift, and go to state 134


State 115

   49 layer_param_list: IDENTIFIER . COLON expr

    COLON  shift, and go to state 135


State 116

   46 module_call: IDENTIFIER LPAREN layer_params . RPAREN

    RPAREN  shift, and go to state 136


State 117

   48 layer_params: layer_param_list .
   57 layer_param_list: layer_param_list . COMMA IDENTIFIER COLON expr
   58                 | layer_param_list . COMMA FILTERS COLON expr
   59                 | layer_param_list . COMMA KERNEL COLON expr
   60                 | layer_param_list . COMMA ACTIVATION COLON expr
   61                 | layer_param_list . COMMA STRIDE COLON expr
   62                 | layer_param_list . COMMA PADDING COLON expr
   63                 | layer_param_list . COMMA POOL COLON expr
   64                 | layer_param_list . COMMA UNITS COLON expr

    COMMA  shift, and go to state 137

    $default  reduce using rule 48 (layer_params)


State 118

   23 optional_from_clause: FROM expr .

    $default  reduce using rule 23 (optional_from_clause)


State 119

   75 array_elements: array_elements COMMA number .

    $default  reduce using rule 75 (array_elements)


State 120

   33 conv2d_layer: CONV2D LPAREN FILTERS COLON . expr COMMA KERNEL COLON array COMMA STRIDE COLON expr COMMA PADDING COLON expr COMMA ACTIVATION COLON activation_value RPAREN

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    expr              go to state 138
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 121

   34 dense_layer: DENSE LPAREN UNITS COLON . expr COMMA ACTIVATION COLON activation_value RPAREN

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    expr              go to state 139
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 122

   35 pool_layer: MAXPOOL LPAREN POOL COLON . array COMMA STRIDE COLON expr COMMA PADDING COLON expr RPAREN

    LBRACKET  shift, and go to state 40

    array  go to state 140


State 123

   36 pool_layer: AVGPOOL LPAREN POOL COLON . array COMMA STRIDE COLON expr COMMA PADDING COLON expr RPAREN

    LBRACKET  shift, and go to state 40

    array  go to state 141


State 124

   38 add_layer: ADD LPAREN add_args RPAREN .

    $default  reduce using rule 38 (add_layer)


State 125

   40 add_args: add_args COMMA . expr

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    expr              go to state 142
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 126

   41 concat_layer: CONCAT LPAREN concat_args RPAREN .

    $default  reduce using rule 41 (concat_layer)


State 127

   43 concat_args: concat_args COMMA . expr

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    expr              go to state 143
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 128

   50 layer_param_list: FILTERS COLON . expr

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    expr              go to state 144
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 129

   51 layer_param_list: KERNEL COLON . expr

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    expr              go to state 145
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 130

   52 layer_param_list: ACTIVATION COLON . expr

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    expr              go to state 146
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 131

   53 layer_param_list: STRIDE COLON . expr

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    expr              go to state 147
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 132

   54 layer_param_list: PADDING COLON . expr

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40

    expr              go to state 148
    identifier_expr   go to state 90
    number            go to state 91
    array             go to state 92
    activation_value  go to state 93


State 133

   55 layer_param_list: POOL COLON . expr

    INPUT       shift, and go to state 82
    RELU        shift, and go to state 83
    SIGMOID     shift, and go to state 84
    TANH        shift, and go to state 85
    SOFTMAX     shift, and go to state 86
    LINEAR      shift, and go to state 87
    NUMBER      shift, and go to state 65
    FLOAT_NUM   shift, and go to state 66
    IDENTIFIER  shift, and go to state 88
    LBRACKET    shift, and go to state 40
